--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
     </div>
 
     <div class="gallery"></div>
+    <div class="button-wrapper">
+      <button type="button" class="load-more">Load more</button>
+    </div>
 
     <script type="module" src="./index.js"></script>
   </body>
