--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,6 @@
       <button type="button" class="load-more">Load more</button>
     </div>
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
